--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         }
     ],
     "require": {
-        "php": "~8.1.0 || ~8.2.0"
+        "php": "~8.1.0 || ~8.2.0",
+        "phpmyadmin/sql-parser": "^5.8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.38.2",
