--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
             "email": "smcientistamaluco@gmail.com"
         }
     ],
+    "bin": ["bin/sqlstyle-fixer"],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "composer-runtime-api": "^2.2",
         "phpmyadmin/sql-parser": "^5.8"
     },
     "require-dev": {
@@ -33,6 +35,7 @@
         "phpstan/phpstan-strict-rules": "1.5.2",
         "phpunit/phpunit": "10.4.2",
         "slevomat/composer-require-checker-shim": "4.5.0",
+        "symfony/process": "6.4.7",
         "thecodingmachine/phpstan-strict-rules": "1.0.0",
         "thecodingmachine/safe": "2.5.0"
     },
