--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
-/.github/ export-ignore
 /tests/ export-ignore
+/.github/ export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.php-cs-fixer.dist.php export-ignore
+/phparkitect.php export-ignore
 /phpstan.dist.neon export-ignore
 /phpunit.dist.xml export-ignore
