--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "bin": ["bin/sqlstyle-fixer"],
     "require": {
-        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "composer-runtime-api": "^2.2",
         "phpmyadmin/sql-parser": "^5.8"
     },
