--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,12 @@
     "bin": ["bin/sqlstyle-fixer"],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
+        "ext-tokenizer": "*",
         "composer-runtime-api": "^2.2",
+        "friendsofphp/php-cs-fixer": "^3.53",
         "phpmyadmin/sql-parser": "^5.8"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "3.53.0",
         "phparkitect/phparkitect": "^0.3.29",
         "phpstan/phpstan": "1.10.41",
         "phpstan/phpstan-strict-rules": "1.5.2",
